Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,4 @@
-# Python package
+
 # Create and test a Python package on multiple Python versions.
 # Add steps that analyze code, save the dist with the build record, publish to a PyPI-compatible index, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/python
@@ -22,3 +22,11 @@ steps:
 - script: |
     python -m pip install --upgrade pip
   displayName: 'Install dependencies'
+
+# Python package
+- task: Docker@2
+  inputs:
+    containerRegistry: 'mlopsserviceconnection'
+    repository: 'predictaffairrepo'
+    command: 'buildAndPush'
+    Dockerfile: '**/dockerfile'
